@@ -1,3 +1,7 @@
+2019-01-10  Andreas Scherer  <https://ascherer.github.io>
+
+	* help.h (CTWILLHELP): update.
+
 2019-01-09  Andreas Scherer  <https://ascherer.github.io>
 	
 	* help.h (CTANGLEHELP, CWEAVEHELP, CTWILLHELP): update.
